[gd_scene load_steps=2 format=3 uid="uid://c1w50aer7m27h"]

[ext_resource type="Script" path="res://Network_setup.gd" id="1_xq2m1"]

[node name="Network _setup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xq2m1")

[node name="Multiplayer_configure" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Create Server" type="Button" parent="Multiplayer_configure"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -65.0
offset_right = 184.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 45
text = "Create Server"

[node name="Join Server" type="Button" parent="Multiplayer_configure"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = 135.0
offset_right = 184.0
offset_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 45
text = "Join Server"

[node name="LineEdit" type="LineEdit" parent="Multiplayer_configure"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -359.0
offset_top = 250.0
offset_right = 359.0
offset_bottom = 321.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 45
placeholder_text = "Enter IP Address"
alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -132.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Multiplayer_configure/Create Server" to="." method="_on_create_server_pressed"]
[connection signal="pressed" from="Multiplayer_configure/Join Server" to="." method="_on_join_server_pressed"]
